--- a/src/main/resourses/templates/add-user.html
+++ b/src/main/resourses/templates/add-user.html
@@ -7,8 +7,8 @@
 
     </head>
     <body>
-        <div>
-			<div>
+        <div class="background">
+			<div class="form_wrapper">
 					<form action="#" th:action="@{/adduser}" th:object="${data}" method="post">
 						Fill in form <br>
 							<label for="name">Name</label>
@@ -31,6 +31,7 @@
 					</form>
 			</div>
 		</div>
+
 
     </body>
 </html>
