--- a/src/main/resourses/templates/index.html
+++ b/src/main/resourses/templates/index.html
@@ -1,76 +1,23 @@
 <!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>App</title>
-
-
+        <title>Lab7</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="background">
-			<h1 class="title">Welcome!</h1>
-						<table class="styled-table">
-								<thead>
-									<tr>
-										<th>name</th>
-										<th>age</th>
-										<th>gender</th>
-										<th>email</th>
-										<th>...</th>
-										<th>X</th>
-									</tr>
-								</thead>
-								<tbody>
-									
-								<tr th:each="student:${students}">
-									<td th:text="${student.name}"></td>
-									<td th:text="${student.age}"></td>
-									<td th:text="${student.gender}"></td>
-									<td th:text="${student.email}"></td>
-									<td>
-										<form action="./update" method="post">
-											<input type="hidden" name="url" th:value="${student.getHref()}">
-											<input type="text" name="name" th:value="${student.name}"/>
-											<input type="text" name="age" th:value="${student.age}"/>
-											<input type="text" name="gender" th:value="${student.gender}"/>
-											<input type="text" name="email" th:value="${student.email}"/>
-											<input type="submit" value="update"/>
-										</form>
-									</td>
-									<td>
-										<form action="./delete" method="post">
-											<input type="hidden" name="url" th:value="${student.getHref()}">                
-											<input type="submit" value="delete"/>
-										</form> 
-									</td>
-								</tr>
-								
-							   <tr>
-								   <form action="./add" method="post">
-										<td>
-											<input type="text" name="name" placeholder="Enter name"/>
-										</td>
-										<td>
-											<input type="text" name="age" placeholder="Enter age"/>
-										</td>
-										<td>
-											<input type="text" name="gender" placeholder="Enter gender"/>
-										</td>
-										<td>
-											<input type="text" name="email" placeholder="Enter email"/>
-										</td>
-										<td>
-											<input type="submit" value="Add new"/>
-										</td>
-									</form>
-								</tr>
-								</tbody>
-							</table>
-											 
-						
-					</div>
-
-
-			</body>
-		</html>            
+        <div>Table</div>
+        
+        <form action="./getMessage" method="get">
+            
+            <input type="submit" value="Get All"/>
+        </form>
+        
+        
+    </body>
+</html>
